# NLP-coursera

./: README.md
Classification-and-Vector-Spaces/: pyproject.toml
Classification-and-Vector-Spaces/Week1/: C1_W1_Assignment.ipynb  C1_W1_lecture_nb_01_preprocessing.ipynb  C1_W1_lecture_nb_02_word frequencies.ipynb  C1_W1_lecture_nb_03_logistic_regression_model.ipynb
Classification-and-Vector-Spaces/Week1/utils/: utils.py
Classification-and-Vector-Spaces/Week2/: C1_W2_Assignment.ipynb  C1_W2_lecture_nb_01_visualizing_naive_bayes.ipynb  w2_unittest.py
Classification-and-Vector-Spaces/Week2/utils/: utils.py
Classification-and-Vector-Spaces/Week3/: C1_W3_Assignment.ipynb  C1_W3_lecture_nb_01_linear_algebra.ipynb  C1_W3_lecture_nb_02_manipulating_word_embeddings.ipynb  C1_W3_lecture_nb_03_pca.ipynb  w3_unittest.py
Classification-and-Vector-Spaces/Week3/utils/: utils.py
