[project]
name = "classification-and-vector-spaces"
version = "0.1.0"
description = ""
authors = [
    {name = "Wai Yan Lam",email = "waiyan0304@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "jupyterlab (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
